syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anma.proto";
option java_outer_classname = "CommentProto";
//option objc_class_prefix = "HLW";

package anma;

message CommentRequest {
  int64 id = 1;
}

message CommentResponse {
  int64 id = 1;
  string body = 2;
  int64 parent_id = 3;
}

service CommentService {
  rpc GetComment (CommentRequest) returns (CommentResponse) {}
  rpc StreamComments(CommentRequest) returns (stream CommentResponse) {}
}

